--- a/less/widgets.less
+++ b/less/widgets.less
@@ -579,7 +579,7 @@ input{
 		}
 	}	
 }
-#signitureModal{
+#signitureModal,#videoCapptureModal{
 	.modal-dialog{
 		width:30%;
 	}
@@ -599,6 +599,18 @@ input{
 			height:250px!important;
 		}
 	}
+}
+#videoCapptureModal{
+	.modal-dialog{
+		.modal-wrapper{
+			padding:40px;
+			padding-top:56px;
+		}		
+		.video-js{
+			margin:0 auto;
+			margin-bottom:10px!important;
+		}
+	}	
 }
 /* place fullscreen control on right side of the player */
 .video-js .vjs-control.vjs-fullscreen-control {
