--- a/less/common.less
+++ b/less/common.less
@@ -1041,11 +1041,17 @@ span.highlight{
 .no-padding {
   padding: 0px !important;
 }
+.no-margin {
+	margin: 0px !important;
+}
 .paddingTop2 {
 	padding-top:2% !important;
 }
 .disable-scroll{
 	overflow:hidden!important;	
+}
+.mCSB_buttonUp{
+	display: none; 
 }
 @keyframes makeDropdown{
 
