--- a/less/table.less
+++ b/less/table.less
@@ -283,6 +283,28 @@
 			}
 		}
 	}
+	&.finGoalStatusTable{
+	    width: 100%;
+	    background: none;
+	    border: none;
+	    border-radius: 0;
+	    box-shadow: none;
+	    padding:0;
+	    margin-top: 8%;
+	    .debt_percent {
+	    	color: #cb624d!important;
+	    	padding-right:6px;
+	    }
+	    .equity_percent {
+	    	color: #62bb46!important;
+	    }
+	    .thead {
+	    	padding-bottom: 0;
+	    }
+	    .tbody .tr {
+	    	padding:0;
+	    }
+	}
 	&.reviewInvest{
 		width:100%;
 		margin-bottom:5%;
