--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1329,11 +1329,17 @@ span.highlight {
 .no-padding {
   padding: 0px !important;
 }
+.no-margin {
+  margin: 0px !important;
+}
 .paddingTop2 {
   padding-top: 2% !important;
 }
 .disable-scroll {
   overflow: hidden!important;
+}
+.mCSB_buttonUp {
+  display: none;
 }
 @-webkit-keyframes makeDropdown {
   /*0%{
@@ -5218,6 +5224,32 @@ section.registerInvestor .registerInvestorConfirm {
   width: 20%;
   float: left;
 }
+.table-outer-cover.finGoalStatusTable {
+  width: 100%;
+  background: none;
+  border: none;
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+  -webkit-box-shadow: none;
+     -moz-box-shadow: none;
+          box-shadow: none;
+  padding: 0;
+  margin-top: 8%;
+}
+.table-outer-cover.finGoalStatusTable .debt_percent {
+  color: #cb624d!important;
+  padding-right: 6px;
+}
+.table-outer-cover.finGoalStatusTable .equity_percent {
+  color: #62bb46!important;
+}
+.table-outer-cover.finGoalStatusTable .thead {
+  padding-bottom: 0;
+}
+.table-outer-cover.finGoalStatusTable .tbody .tr {
+  padding: 0;
+}
 .table-outer-cover.reviewInvest {
   width: 100%;
   margin-bottom: 5%;
@@ -6469,6 +6501,17 @@ section.trackPerformance .chart-cover.scheme-pie .scheme-chart p span.nextline {
 section.trackPerformance .chart-cover.scheme-pie .customPanel {
   padding-top: 40px;
 }
+section.trackPerformance .chart-cover.transaction-cover {
+  height: 517px;
+}
+section.trackPerformance .chart-cover.transaction-cover .schemes-inner h2 {
+  font-family: 'PlayfairDisplay-Regular';
+  color: #047bc1;
+  font-weight: normal;
+  font-size: 1.125em;
+  margin-top: 0;
+  margin-bottom: 0px;
+}
 section.trackPerformance .chart-main-tabs li {
   margin-left: 0px;
   margin-right: 5%;
@@ -6478,9 +6521,81 @@ section.trackPerformance .chart-main-tabs li a {
 }
 #finGoalStatusModal .modal-dialog {
   width: 60%;
+  top: 10%;
+}
+#finGoalStatusModal .modal-dialog .modal-content {
+  float: none;
 }
 #finGoalStatusModal .modal-dialog .modal-content .modal-wrapper {
-  padding: 7% 4% 8% 4%;
+  padding: 7% 4% 4% 4%;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .finance-desc span.content {
+  font-family: 'PlayfairDisplay-Regular';
+  color: #247abc;
+  font-weight: normal;
+  font-size: 1.875em;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .target-amount {
+  font-family: 'PlayfairDisplay-Regular';
+  font-size: 1.5em;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .progress {
+  margin-top: 21px;
+  height: 8px;
+  margin-bottom: 0px;
+  background-color: #e3e3e3;
+  overflow: visible;
+  margin-left: auto;
+  margin-right: auto;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .progress .progress-bar {
+  background-color: #f16625;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  position: relative;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .progress .progress-bar span {
+  position: absolute;
+  display: inline-block;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .progress .progress-bar span.progress-price {
+  color: #000;
+  font-family: 'PlayfairDisplay-Regular';
+  font-size: 1.375em;
+  top: -22px;
+  right: 23px;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .progress .progress-bar span.progress-price .amount {
+  margin-left: 8px;
+  width: 70px;
+  text-align: left;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .progress .progress-bar span.progress-percentage {
+  color: #000;
+  width: 43px;
+  font-size: 1em;
+  bottom: -20px;
+  right: -38px;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .progress .progress-bar:before {
+  content: attr(data-percentage);
+  position: absolute;
+  right: 0;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .taxPlanSchemeListTable {
+  height: 220px;
+  overflow-y: auto;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .panel-heading {
+  width: 94%;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .panel-collapse {
+  width: 94%;
+}
+#finGoalStatusModal .modal-dialog .modal-content .modal-wrapper .fin-btn-group {
+  padding-bottom: 0;
+  padding-top: 2%;
 }
 .loader {
   position: fixed;
