--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -295,6 +295,19 @@ section{
 					padding-top:40px;
 				}
 			}
+			&.transaction-cover{
+				height:517px;
+				.schemes-inner{
+					h2{
+						font-family: 'PlayfairDisplay-Regular';
+					    color: #047bc1;
+					    font-weight: normal;
+					    font-size: 1.125em;
+					    margin-top: 0;
+					    margin-bottom: 0px;
+					}
+				}
+			}
 		}
 		.chart-main-tabs{
 			li{
@@ -309,10 +322,82 @@ section{
 }
 #finGoalStatusModal{
 	.modal-dialog{
-	width:60%;
+		width:60%;
+		top: 10%;
 	.modal-content{
+		float:none;
 		.modal-wrapper{
-			padding: 7% 4% 8% 4%;
+			padding: 7% 4% 4% 4%;
+			.finance-desc{
+				span.content{
+				    font-family: 'PlayfairDisplay-Regular';
+				    color: #247abc;
+				    font-weight: normal;
+				    font-size: 1.875em;
+				}
+			}
+			.target-amount{
+				font-family: 'PlayfairDisplay-Regular';
+    			font-size: 1.5em;
+			}
+			.progress{
+				margin-top: 21px;
+			    height: 8px;
+			    margin-bottom: 0px;
+			    background-color: #e3e3e3;
+			    overflow: visible;
+			    margin-left: auto;
+			    margin-right: auto;
+			    .progress-bar{
+			    	background-color: #f16625;
+				    -webkit-border-radius: 4px;
+				    -moz-border-radius: 4px;
+				    border-radius: 4px;
+				    position: relative;
+				    span{
+			    	    position: absolute;
+    					display: inline-block;
+				    }
+				    span.progress-price {
+					    color: #000;
+					    font-family: 'PlayfairDisplay-Regular';
+					    font-size: 1.375em;
+					    top: -22px;
+					    right: 23px;
+					    .amount {
+						    margin-left: 8px;
+						    width: 70px;
+						    text-align: left;
+						}
+					}
+					span.progress-percentage {
+					    color: #000;
+					    width: 43px;
+					    font-size: 1em;
+					    bottom: -20px;
+					    right: -38px;
+					}
+			    }
+			    .progress-bar:before{
+			    	content: attr(data-percentage);
+    				position: absolute;
+    				right: 0;
+			    }
+			}
+			.taxPlanSchemeListTable{
+				height: 220px;
+				overflow-y: auto;
+			}
+			.panel-heading {
+				width: 94%;
+			}
+			.panel-collapse {
+				width: 94%;
+			}
+			.fin-btn-group {
+				padding-bottom: 0;
+				padding-top: 2%
+			}
 		}
 	}
 	}
