--- a/less/smartpolio.less
+++ b/less/smartpolio.less
@@ -303,8 +303,40 @@ section{
 		  	}
 		}
 		.scheme-compare-other {
-		  height:398px !important;
+		  height: 500px;
 		  padding: 4% 8% !important;
+		  background-image: -moz-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+	  		background-image: -webkit-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+		  	box-shadow: 1px 5.33px 11px -4px rgb( 4, 123, 193 );
+		  	height:437px;
+		  	border-radius:25px;
+		  	padding:4% 3%;
+		  	h2{
+		  		.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',#047bc1,normal);
+				.PIXEL2EM(18);
+				margin-top: 0;
+				margin-bottom: 0px;
+		  	}
+		  	h3{
+		  		.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
+				.PIXEL2EM(16);
+				margin-top: 16px;
+				margin-bottom: 15px;
+		  	}
+		  	.list-details{
+		  		width:100%;
+		  		float:left;
+		  	}
+		  	.checkbox-cover{
+		  		padding-top:25px;
+		  	}
+		  	.schemes-inner{
+				padding: 20px 10px;
+				border-radius: 25px;
+				background-color:#f0f4f7;
+				margin-bottom:10px;
+				width:92%;
+		  	}
 		}
 
 		.schemeRating {
