--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -5915,8 +5915,50 @@ section.compareSchemes .schemes-cover .schemes-inner {
   width: 92%;
 }
 section.compareSchemes .scheme-compare-other {
-  height: 398px !important;
+  height: 500px;
   padding: 4% 8% !important;
+  background-image: -moz-linear-gradient(90deg, #f5f5f5 0%, #ffffff 100%);
+  background-image: -webkit-linear-gradient(90deg, #f5f5f5 0%, #ffffff 100%);
+  -webkit-box-shadow: 1px 5.33px 11px -4px #047bc1;
+     -moz-box-shadow: 1px 5.33px 11px -4px #047bc1;
+          box-shadow: 1px 5.33px 11px -4px #047bc1;
+  height: 437px;
+  -webkit-border-radius: 25px;
+     -moz-border-radius: 25px;
+          border-radius: 25px;
+  padding: 4% 3%;
+}
+section.compareSchemes .scheme-compare-other h2 {
+  font-family: 'PlayfairDisplay-Regular';
+  color: #047bc1;
+  font-weight: normal;
+  font-size: 1.125em;
+  margin-top: 0;
+  margin-bottom: 0px;
+}
+section.compareSchemes .scheme-compare-other h3 {
+  font-family: 'PlayfairDisplay-Regular';
+  color: #000;
+  font-weight: normal;
+  font-size: 1em;
+  margin-top: 16px;
+  margin-bottom: 15px;
+}
+section.compareSchemes .scheme-compare-other .list-details {
+  width: 100%;
+  float: left;
+}
+section.compareSchemes .scheme-compare-other .checkbox-cover {
+  padding-top: 25px;
+}
+section.compareSchemes .scheme-compare-other .schemes-inner {
+  padding: 20px 10px;
+  -webkit-border-radius: 25px;
+     -moz-border-radius: 25px;
+          border-radius: 25px;
+  background-color: #f0f4f7;
+  margin-bottom: 10px;
+  width: 92%;
 }
 section.compareSchemes .schemeRating {
   width: 20%;
@@ -6500,6 +6542,52 @@ section.trackPerformance .chart-cover.scheme-pie .scheme-chart p span.nextline {
 }
 section.trackPerformance .chart-cover.scheme-pie .customPanel {
   padding-top: 40px;
+}
+section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends {
+  margin-top: 50%;
+  float: left;
+}
+section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends p {
+  width: 50%;
+  float: left;
+  margin-right: 0;
+}
+section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends .legend-cover {
+  float: left;
+  margin-left: 10px;
+  min-width: 146px;
+}
+section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends .legend-cover .legend-main {
+  height: 18px;
+  position: relative;
+  top: 6px;
+  display: table;
+  float: left;
+}
+section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends .legend-cover .legend-main .right {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  border-top: 9px solid transparent;
+  border-left: 10px solid #fff;
+  border-bottom: 9px solid transparent;
+}
+section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends .legend-cover .legend-main .left {
+  position: absolute;
+  right: -10px;
+  top: 0px;
+  border-top: 9px solid transparent;
+  border-bottom: 9px solid transparent;
+}
+section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends .legend-cover .legend-main span.value {
+  display: table-cell;
+  font-family: 'Roboto-Regular';
+  color: #fff;
+  font-weight: normal;
+  font-size: 0.75em;
+  text-align: center;
+  vertical-align: middle;
+  padding-left: 8px;
 }
 section.trackPerformance .chart-cover.transaction-cover {
   height: 517px;
