--- a/app/modules/smartportfolio/views/schemeComparision.html
+++ b/app/modules/smartportfolio/views/schemeComparision.html
@@ -127,7 +127,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-7">
+	<div class="col-xs-7 ">
 		<ul class="chart-main-tabs" ng-init="setChartValue = 'HISTORIC'">
 			<li ng-click="setChartValue = 'HISTORIC'" ng-class="{'activeli':setChartValue == 'HISTORIC'}"><a href="javascript:void(0)" >Historic Performance</a></li>
 			<li ng-click="setChartValue = 'OTHERS'" ng-class="{'activeli':setChartValue == 'OTHERS'}"><a href="javascript:void(0)">Other Comparison</a></li>
@@ -143,39 +143,140 @@
 			<hc-chart ng-if="resultSet" items="resultSet"></hc-chart>
 			<p class="text-right"><span class="addOnlyBold">Rs 10,000</span> invested on {{resultSet[0]['data'][0]['date']}} would be <span class="content" ng-if="$root.nav">Rs.<span class="addOnlyBold">{{$root.nav.amount | currency:''}}</span> on {{$root.nav.date}}</span></p>
 		</div>	
-		<div class="schemes-cover chart-cover scheme-compare-other" ng-show="setChartValue == 'OTHERS'" >
+		<div class="chart-cover scheme-compare-other" ng-show="setChartValue == 'OTHERS'" >
 			<div class="schemes-inner col-xs-12">
 				<div class="col-xs-12">
-					
 					<h3 class="pull-left">SBI Bluechip Fund Regular Growth</h3>
 					<p class="pull-right">AUM Size
 					<span class="highlight nextline">9534 Cr</span>
 					</p>
 					<div class="list-details">
-						<div class="table schemeCompareTable">
+						<div class="table">
 							<div class="thead">
 								<div class="tr">
-									<div class="th">
-										<p>1 Year Return</p>
+									<div class="th col-xs-4 no-padding">
+										<p>FinAskus Rank</p>
 									</div>
-									<div class="th">
-										<p>3 Year Return</p>
+									<div class="th col-xs-4 no-padding">
+										<p>Morning star</p>
 									</div>
-									<div class="th">
-										<p>5 Year Return</p>
+									<div class="th col-xs-4 no-padding">
+										<p>Exp Ratio</p>
 									</div>
 								</div>
 							</div>
 							<div class="tbody">
 								<div class="tr">
-									<div class="td">
-										<p>14.30%</p>
+									<div class="td col-xs-4 no-padding">
+										<p>1</p>
 									</div>
-									<div class="td">
-										<p>14.30%</p>
+									<div class="td col-xs-4 no-padding">
+										<p>XXXXX</p>
 									</div>
-									<div class="td">
-										<p>14.30%</p>
+									<div class="td col-xs-4 no-padding">
+										<p>1.39%</p>
+									</div>
+								</div>
+							</div>
+							<div class="thead">
+								<div class="tr">
+									<div class="th col-xs-3 no-padding">
+										<p>Risk</p>
+									</div>
+									<div class="th col-xs-3 no-padding">
+										<p>Sharpe Ratio</p>
+									</div>
+									<div class="th col-xs-3 no-padding">
+										<p>Alpha</p>
+									</div>
+									<div class="th col-xs-3 no-padding">
+										<p>Beta</p>
+									</div>
+								</div>
+							</div>
+							<div class="tbody">
+								<div class="tr">
+									<div class="td col-xs-3 no-padding">
+										<p>MS Risk</p>
+									</div>
+									<div class="td col-xs-3 no-padding">
+										<p>1.234</p>
+									</div>
+									<div class="td col-xs-3 no-padding">
+										<p>0.23</p>
+									</div>
+									<div class="td col-xs-3 no-padding">
+										<p>0.37</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="schemes-inner col-xs-12">
+				<div class="col-xs-12">
+					<h3 class="pull-left">SBI Bluechip Fund Regular Growth</h3>
+					<p class="pull-right">AUM Size
+					<span class="highlight nextline">9534 Cr</span>
+					</p>
+					<div class="list-details">
+						<div class="table">
+							<div class="thead">
+								<div class="tr">
+									<div class="th col-xs-4 no-padding">
+										<p>FinAskus Rank</p>
+									</div>
+									<div class="th col-xs-4 no-padding">
+										<p>Morning star</p>
+									</div>
+									<div class="th col-xs-4 no-padding">
+										<p>Exp Ratio</p>
+									</div>
+								</div>
+							</div>
+							<div class="tbody">
+								<div class="tr">
+									<div class="td col-xs-4 no-padding">
+										<p>1</p>
+									</div>
+									<div class="td col-xs-4 no-padding">
+										<p>XXXXX</p>
+									</div>
+									<div class="td col-xs-4 no-padding">
+										<p>1.39%</p>
+									</div>
+								</div>
+							</div>
+							<div class="thead">
+								<div class="tr">
+									<div class="th col-xs-3 no-padding">
+										<p>Risk</p>
+									</div>
+									<div class="th col-xs-3 no-padding">
+										<p>Sharpe Ratio</p>
+									</div>
+									<div class="th col-xs-3 no-padding">
+										<p>Alpha</p>
+									</div>
+									<div class="th col-xs-3 no-padding">
+										<p>Beta</p>
+									</div>
+								</div>
+							</div>
+							<div class="tbody">
+								<div class="tr">
+									<div class="td col-xs-3 no-padding">
+										<p>MS Risk</p>
+									</div>
+									<div class="td col-xs-3 no-padding">
+										<p>1.234</p>
+									</div>
+									<div class="td col-xs-3 no-padding">
+										<p>0.23</p>
+									</div>
+									<div class="td col-xs-3 no-padding">
+										<p>0.37</p>
 									</div>
 								</div>
 							</div>
