Added SIP and corpus logic to Education

--- a/app/modules/goals/modules/education/views/educationStarted.html
+++ b/app/modules/goals/modules/education/views/educationStarted.html
@@ -5,12 +5,11 @@
                 <img src="assets/images/education.png">
             </div>
             <h1 class="pull-left slider-description">Education</h1>
-            <h2 class="pull-left">Education makes a women.Save for your child's(or your)<span class="nextline">dream education and let finances not force you to make a compromise.</span></span></h2>
+            <h2 class="pull-left">Education makes a woman. Save for your child's (or your)<span class="nextline">dream education and let finances not force you to make a compromise.</span></span></h2>
         </div>                
         <div class="radio-cover">
-            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to select my target savings for education,show me how much i need to save every month</label>
-            <input type="radio" required id="option1Type2" name="opoption1Tion1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type2"><span></span>I want to save a specific amount per month,show me how much will I get when i retire</label>
-            <input type="radio" required id="option1Type3" name="option1" ng-model="$root.selectedCriteria" value="op3"><label for="option1Type3"><span></span>Please help me estimate my retirement plan</label>
+            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
+            <input type="radio" required id="option1Type3" name="option1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type3"><span></span>Please help me estimate</label>
         </div>
         <div class="col-xs-12">
             <div class="row">
