--- a/app/modules/goals/modules/property/views/propertyStarted.html
+++ b/app/modules/goals/modules/property/views/propertyStarted.html
@@ -8,9 +8,8 @@
             <h2 class="pull-left">Home where the heart is.Invest for that dream home or the weekend farmhouse<span class="nextline">that you always wanted,and let finances not force you to make a compromise.</span></span></h2>
         </div>                
         <div class="radio-cover">
-            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to select my target savings for my dream property,show me how much i need to save every month</label>
-            <input type="radio" required id="option1Type2" name="opoption1Tion1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type2"><span></span>I want to save a specific amount per month,show me how much will I get when i purchase the property</label>
-            <input type="radio" required id="option1Type3" name="option1" ng-model="$root.selectedCriteria" value="op3"><label for="option1Type3"><span></span>Please help me estimate my property purchase plan</label>
+            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
+            <input type="radio" required id="option1Type3" name="option1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type3"><span></span>Please help me estimate</label>
         </div>
         <div class="col-xs-12">
             <div class="row">
