--- a/app/modules/goals/modules/automobile/views/automobile.html
+++ b/app/modules/goals/modules/automobile/views/automobile.html
@@ -1,10 +1,11 @@
 <!-- <div class="col-xs-12" ng-controller="automobileController">
 	<div class="row"> -->
 		<section class="fadeIn swiper-outer-cover">
-			<swiper swiper-name="automobile" ng-show="showPortfolioFactoring" controller-name="automobileController" reduce="true" result="resultObject" callback-fn="appendFormValues(data)" callmodal-fn="showEquityModal()" indicator-end="Automobile"></swiper>
-			<div ng-show="!showPortfolioFactoring">
+			<swiper swiper-name="automobile" controller-name="automobileController" reduce="true" result="resultObject" callback-fn="appendFormValues(data)" callmodal-fn="showEquityModal()" indicator-end="Automobile"></swiper>
+<!-- 			<div ng-show="!showPortfolioFactoring">
 				<goal-loading></goal-loading>
-			</div>
+			</div> 
+			 -->
 		</section>
 		
 <!-- 	</div>
