Added calculations for wedding and vacation goals

--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -47,7 +47,7 @@
 						<label><span></span></label>
 					</div>
 				</div>
-				<h2>Autmobile</h2>
+				<h2>Automobile</h2>
 			</div>
 		</div>
 	</div>
